L00/es4/compiling_error.txt
/home/gabriele/Desktop/Algoritmi/Esercizi/Lab00/es4/main.c: In function ‘main’:
/home/gabriele/Desktop/Algoritmi/Esercizi/Lab00/es4/main.c:55:5: error: variable-sized object may not be initialized
     int matrixSum = 0, maxMatrixSum = 0, supportMatrix[dim][dim] = {{0}}, maxSupportMatrix[dim][dim];
     ^~~
/home/gabriele/Desktop/Algoritmi/Esercizi/Lab00/es4/main.c:55:70: warning: excess elements in array initializer
     int matrixSum = 0, maxMatrixSum = 0, supportMatrix[dim][dim] = {{0}}, maxSupportMatrix[dim][dim];
                                                                      ^
/home/gabriele/Desktop/Algoritmi/Esercizi/Lab00/es4/main.c:55:70: note: (near initialization for ‘supportMatrix[0]’)
/home/gabriele/Desktop/Algoritmi/Esercizi/Lab00/es4/main.c:55:69: warning: excess elements in array initializer
     int matrixSum = 0, maxMatrixSum = 0, supportMatrix[dim][dim] = {{0}}, maxSupportMatrix[dim][dim];
                                                                     ^
/home/gabriele/Desktop/Algoritmi/Esercizi/Lab00/es4/main.c:55:69: note: (near initialization for ‘supportMatrix’)
